--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <html>
+<script src="/Chart.min.js"></script>
 	<body>
-		<div id='test'> asdf </div>
-		<script>
-			xmlhttp=new XMLHttpRequest();
-			xmlhttp.open("GET","/upd8",false);
-			xmlhttp.send();
-			alert(xmlhttp.response);
-
-			var hello = JSON.parse(xmlhttp.response);
-			document.getElementById('test').textContent = hello.labels[0];
-		</script>
+		<p>Power Data</p>
+		<canvas id="myChart" style='width:100%; height: 90%'></canvas>
 	</body>
+<script>
+	xmlhttp = new XMLHttpRequest();
+	xmlhttp.open("GET","/upd8",false);
+	xmlhttp.send();
+
+	var chartData = JSON.parse(xmlhttp.response);
+	var ctx = document.getElementById("myChart").getContext("2d");
+	var myLineChart = new Chart(ctx).Line(chartData);
+</script>
 </html>
